Fix some spacing and color issues

--- a/packages/zest/source/components/TextField/Input.module.css
+++ b/packages/zest/source/components/TextField/Input.module.css
@@ -49,7 +49,7 @@
   color: inherit;
 
   &::placeholder {
-    color: var(--z-Input-placeholder-color);
+    color: var(--z-TextField-placeholder-color);
   }
 }
 
